# go2web

./: .gitignore  README.md  main.py  pyproject.toml
go2web/: __init__.py  cache.py  cli.py  http_client.py  render.py  search.py
scripts/: demo.sh
tests/: test_cache.py  test_cli.py  test_http_client.py  test_render.py  test_search.py
