[project]
name = "go2web"
version = "0.1.0"
description = "CLI web fetch and search over raw TCP sockets"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "pytest>=8.3.0",
  "typer>=0.12.3",
]

[project.scripts]
go2web = "go2web.cli:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
